@@ -1,3 +1,10 @@
+2009-12-13  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* couchdb/views/by-status/map.js:
+	  Add a new view.
+	* python/mushin/common/app.py:
+	  Add waitingfor getters.
+
 2009-12-12  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/common/format.py (added):
